--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,21 @@
-@import url(fontawesome-all.min.css);
-
+/* @import url(fontawesome-all.min.css); */
+<!-- Font Awesome CDN -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 /*
 	Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+
+@font-face {
+    font-family: 'CocogooseProTrial';
+    src: url('/fonts/CocogooseProTrial-Regular.woff2') format('woff2'),
+       url('/fonts/CocogooseProTrial-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -116,12 +127,15 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: rgba(255, 255, 255, 0.55);
-		font-family: Arial, Helvetica, sans-serif;
+		font-family: 'Inter', Arial,;
 		font-size: 16.5pt;
 		font-weight: normal;
 		line-height: 1.75;
 	}
-
+	.logo, .webmark {
+    font-family: 'Cocogoose', sans-serif;
+    font-weight: bold;
+	}
 		@media screen and (max-width: 1680px) {
 
 			body, input, select, textarea {
