--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2989,6 +2989,24 @@ input, select, textarea {
 
 		}
 
+/* Center footer menu and prevent unwanted line breaks */
+#footer .menu {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 2em; /* space between items */
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    text-align: center;
+}
+
+#footer .menu li {
+    white-space: nowrap; /* Prevent line breaks within items */
+    display: inline-block;
+}
+
 /* Section/Article */
 
 	section.special, article.special {
